Fix for member pill alignment

--- a/app/modules/huron/features/huntGroup/setupAssistantPages/_hunt-members-lookup.scss
+++ b/app/modules/huron/features/huntGroup/setupAssistantPages/_hunt-members-lookup.scss
@@ -48,6 +48,7 @@
 }
 
 .hunt-member-card {
+  position: static !important;
   width: rem-calc(250);
   height: rem-calc(40);
 
